tests/parsing/smtlib/v2.7/errors/141_datatype_arity_dec_bad_name_1.smt2
(set-logic ALL)
(declare-datatypes ((_)))
